--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>parkkiwanblog.github.io</title>
+<title>Kiwan Park</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -103,7 +103,7 @@ ul.task-list li input[type="checkbox"] {
       <div class="navbar-container container-fluid">
       <div class="navbar-brand-container">
     <a class="navbar-brand" href="./index.html">
-    <span class="navbar-title">parkkiwanblog.github.io</span>
+    <span class="navbar-title">Kiwan Park</span>
     </a>
   </div>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
@@ -134,7 +134,7 @@ ul.task-list li input[type="checkbox"] {
 <header id="title-block-header" class="quarto-title-block default page-columns page-full">
   <div class="quarto-title-banner page-columns page-full">
     <div class="quarto-title column-page-left">
-      <h1 class="title">parkkiwanblog.github.io</h1>
+      <h1 class="title">Kiwan Park</h1>
                       </div>
   </div>
     
@@ -151,7 +151,7 @@ ul.task-list li input[type="checkbox"] {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(2)</span></div><div class="category" data-category="analysis">analysis <span class="quarto-category-count">(1)</span></div><div class="category" data-category="code">code <span class="quarto-category-count">(1)</span></div><div class="category" data-category="news">news <span class="quarto-category-count">(2)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(5)</span></div><div class="category" data-category="analysis">analysis <span class="quarto-category-count">(4)</span></div><div class="category" data-category="code">code <span class="quarto-category-count">(4)</span></div><div class="category" data-category="news">news <span class="quarto-category-count">(5)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -164,14 +164,14 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="news,code,analysis" data-listing-date-sort="1663650000000" data-listing-file-modified-sort="1663690489457" data-listing-reading-time-sort="0.045">
+<div class="quarto-post image-right" data-index="0" data-categories="news,code,analysis" data-listing-date-sort="1663650000000" data-listing-file-modified-sort="1668617010335" data-listing-reading-time-sort="2.08">
 <div class="thumbnail">
-<p><a href="./posts/post-with-code/index.html"> <img src="./posts/post-with-code/image.jpg" class="thumnail-image"> </a></p>
+<p><a href="./posts/Assignment/index.html"> <img src="./posts/Assignment/image.jpg" class="thumnail-image"> </a></p>
 </div>
 <div class="body">
-<a href="./posts/post-with-code/index.html">
+<a href="./posts/Assignment/index.html">
 <h3 class="no-anchor listing-title">
-Post With Code
+Assignment2
 </h3>
 <div class="listing-subtitle">
 
@@ -188,24 +188,147 @@ code
 analysis
 </div>
 </div>
-<a href="./posts/post-with-code/index.html">
+<a href="./posts/Assignment/index.html">
 <div class="listing-description">
 This is a post with executable code.
 </div>
 </a>
 </div>
 <div class="metadata">
-<a href="./posts/post-with-code/index.html">
+<a href="./posts/Assignment/index.html">
 <div class="listing-date">
 Sep 20, 2022
 </div>
 <div class="listing-author">
-Harlow Malloc
+Kiwan Park
 </div>
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-categories="news" data-listing-date-sort="1663390800000" data-listing-file-modified-sort="1663690489448" data-listing-reading-time-sort="0.16">
+<div class="quarto-post image-right" data-index="1" data-categories="news,code,analysis" data-listing-date-sort="1663650000000" data-listing-file-modified-sort="1668617150463" data-listing-reading-time-sort="1.595">
+<div class="thumbnail">
+<p><a href="./posts/Assignment3/index.html"> <img src="./posts/Assignment3/image.jpg" class="thumnail-image"> </a></p>
+</div>
+<div class="body">
+<a href="./posts/Assignment3/index.html">
+<h3 class="no-anchor listing-title">
+Assignment3
+</h3>
+<div class="listing-subtitle">
+
+</div>
+</a>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('news'); return false;">
+news
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('code'); return false;">
+code
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('analysis'); return false;">
+analysis
+</div>
+</div>
+<a href="./posts/Assignment3/index.html">
+<div class="listing-description">
+Q1. The examples
+</div>
+</a>
+</div>
+<div class="metadata">
+<a href="./posts/Assignment3/index.html">
+<div class="listing-date">
+Sep 20, 2022
+</div>
+<div class="listing-author">
+Kiwan Park
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="2" data-categories="news,code,analysis" data-listing-date-sort="1663650000000" data-listing-file-modified-sort="1668617356071" data-listing-reading-time-sort="1.01">
+<div class="thumbnail">
+<p><a href="./posts/Assignment4/index.html"> <img src="./posts/Assignment4/image.jpg" class="thumnail-image"> </a></p>
+</div>
+<div class="body">
+<a href="./posts/Assignment4/index.html">
+<h3 class="no-anchor listing-title">
+Assignment4
+</h3>
+<div class="listing-subtitle">
+
+</div>
+</a>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('news'); return false;">
+news
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('code'); return false;">
+code
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('analysis'); return false;">
+analysis
+</div>
+</div>
+<a href="./posts/Assignment4/index.html">
+<div class="listing-description">
+<img src="index_files/figure-html/unnamed-chunk-1-1.png" class="img-fluid" width="672">
+</div>
+</a>
+</div>
+<div class="metadata">
+<a href="./posts/Assignment4/index.html">
+<div class="listing-date">
+Sep 20, 2022
+</div>
+<div class="listing-author">
+Kiwan Park
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="3" data-categories="news,code,analysis" data-listing-date-sort="1663650000000" data-listing-file-modified-sort="1668617448597" data-listing-reading-time-sort="1.09">
+<div class="thumbnail">
+<p><a href="./posts/Assignment5/index.html"> <img src="./posts/Assignment5/image.jpg" class="thumnail-image"> </a></p>
+</div>
+<div class="body">
+<a href="./posts/Assignment5/index.html">
+<h3 class="no-anchor listing-title">
+Assignment5
+</h3>
+<div class="listing-subtitle">
+
+</div>
+</a>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('news'); return false;">
+news
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('code'); return false;">
+code
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('analysis'); return false;">
+analysis
+</div>
+</div>
+<a href="./posts/Assignment5/index.html">
+<div class="listing-description">
+<img src="index_files/figure-html/unnamed-chunk-1-1.png" class="img-fluid" width="672">
+</div>
+</a>
+</div>
+<div class="metadata">
+<a href="./posts/Assignment5/index.html">
+<div class="listing-date">
+Sep 20, 2022
+</div>
+<div class="listing-author">
+Kiwan Park
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="4" data-categories="news" data-listing-date-sort="1663390800000" data-listing-file-modified-sort="1663690489448" data-listing-reading-time-sort="0.16">
 <div class="thumbnail">
 <p><a href="./posts/welcome/index.html"> <img src="./posts/welcome/thumbnail.jpg" class="thumnail-image"> </a></p>
 </div>
